--- a/README
+++ b/README
@@ -1,1 +1,15 @@
-C++ interface to the NP Neutrinoproduction of Pions off Nuclei program package http://atlas.fis.utfsm.cl/np/index.html
+C++ interface to the NP Neutrinoproduction of Pions off Nuclei program package
+See http://atlas.fis.utfsm.cl/np/index.html for documentation on how to use the package
+
+```
+$ make all
+$ ./test_npcpp
+  --------------------------------------------------
+  
+   nu A( 1, 1) --> nu pi0 A( 1, 1)         
+  
+  --------------------------------------------------
+  3.61499
+```
+
+author: Derek Doyle (dddoyle@colostate.edu)
