Fix markdown formatting?

--- a/README
+++ b/README
@@ -1,15 +1,13 @@
 C++ interface to the NP Neutrinoproduction of Pions off Nuclei program package
 See http://atlas.fis.utfsm.cl/np/index.html for documentation on how to use the package
 
-```
-$ make all
+```$ make all
 $ ./test_npcpp
   --------------------------------------------------
   
    nu A( 1, 1) --> nu pi0 A( 1, 1)         
   
   --------------------------------------------------
-  3.61499
-```
+  3.61499```
 
 author: Derek Doyle (dddoyle@colostate.edu)
